--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    
+    <p id="user-cube"></p>
+    <p id="computer-cube"></p>
+    <p id="victory"></p>
 </body>
 </html>
