--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
+    <h1>ESERCIZIO DADI</h1>
     <p id="user-cube"></p>
     <p id="computer-cube"></p>
     <p id="victory"></p>
+    <hr>
+    <h1>FINTA LOGIN</h1>
+    <input type="password" id="password" placeholder="inserisci password" value=""> 
+    <button id="login-button">Login</button>
+
 </body>
 </html>
