--- a/index.html
+++ b/index.html
@@ -5,16 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="js/script.js"></script>
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-    <h1>ESERCIZIO DADI</h1>
-    <p id="user-cube"></p>
-    <p id="computer-cube"></p>
-    <p id="victory"></p>
-    <hr>
-    <h1>FINTA LOGIN</h1>
-    <input type="password" id="password" placeholder="inserisci password" value=""> 
-    <button id="login-button">Login</button>
+    <div class="container">
+        <h1>ESERCIZIO DADI</h1>
+        <p id="user-cube"></p>
+        <p id="computer-cube"></p>
+        <p id="victory"></p>
+        <hr>
+        <h1>FINTA LOGIN</h1>
+        <form class="row g-3">
+            <div class="col-auto">
+              <label for="password" class="visually-hidden">Password</label>
+              <input type="password" class="form-control" id="password" placeholder="Password" value="seiungrande">
+            </div>
+            <div class="col-auto">
+              <button type="button" class="btn btn-primary mb-3" id="login-button">Confirm identity</button>
+            </div>
+
+            <div class="alert alert-success d-none" role="alert">
+                Accesso avvenuto correttamente
+            </div>
+          </form>
+</div>
+    
 
 </body>
 </html>
