--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <div class="alert alert-success d-none" role="alert">
                 Accesso avvenuto correttamente
             </div>
+            <div class="alert alert-danger d-none" role="alert">
+              Accesso negato
+            </div>
           </form>
 </div>
     
