--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <p id="computer-cube"></p>
         <p id="victory"></p>
         <hr>
+        <!--ESERCIZIO LOGIN-->
         <h1>FINTA LOGIN</h1>
         <form class="row g-3">
             <div class="col-auto">
